--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+    width: 100vw;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -13,7 +14,7 @@ body {
 
 @media (max-width: 1440px) {
     body {
-        overflow-y: scroll;
+        overflow-y: scroll !important;
         height: 100%;
     }
 }
